--- a/frontend/src/app/components/chatwidget/chatwidget.component.html
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.html
@@ -5,8 +5,9 @@
     <div id='textarea' #textarea >
     </div>
 
-
-    <form (submit)='sendMessage(msg.value)'>
-    <input class="input"name="ngModel" [(ngModel)]='typeArea' #msg='ngModel' type="text">
-    </form>
+    <div>
+        <form (submit)='sendMessage(msg.value)'>
+            <input class="input"name="ngModel" [(ngModel)]='typeArea' #msg='ngModel' type="text">
+        </form>
+    </div>
 </div>
