--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body scroll="no" style="overflow: hidden">
+<body scroll="no" style="overflow: hidden"  (window:resize)='resizeWindow()'>
 
 
 
@@ -25,6 +25,8 @@
   <div><app-map></app-map></div>
 
 
-<div id="chatroom"><app-chatsystem></app-chatsystem></div>
+  <div id="chatroom">
+    <app-chatsystem></app-chatsystem>
+  </div>
 </body>
 </html>
