--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -1,10 +1,11 @@
 <div id="friendlist" *ngIf='sessionState' class="col">
-    <!-- <button class="btn btn-danger" (click)='session = !session'>hide (one time only)</button> -->
-    <div *ngFor="let friend of friends">
-        <app-friend [friend] = "friend">
-        </app-friend>
+    <div id="friends">
+        <!-- <button class="btn btn-danger" (click)='session = !session'>hide (one time only)</button> -->
+        <div *ngFor="let friend of friends">
+            <app-friend [friend] = "friend">
+            </app-friend>
+        </div>
     </div>
-    
     <form (submit)='onSubmit(input.value)'>
         <input #input type="text" (keyup)="onKey(input.value)" placeholder="(submit)=create room">
     </form>
