--- a/frontend/src/app/components/chatwidget/chatwidget.component.html
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.html
@@ -1,4 +1,4 @@
-<div class="space rounded-top" [innerText]='roomName' aria-readonly="true"></div>
+<div class="space rounded-top" [innerText]='sessionRoomName' aria-readonly="true"></div>
     <div class="widget rounded-bottom" id='chatbody'*ngIf='sessionState' (click)='initRoom()'>
 
     <br>
