--- a/frontend/src/app/components/friendlist/friend/friend.component.html
+++ b/frontend/src/app/components/friendlist/friend/friend.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn" 
+<button type="button" class="btn" data-toggle="button"
     [ngClass]="friend.unread === true? 'btn-danger': 'btn-light'"
     (click)='toggleChatWidget(friend)'>
         {{sessionRoomName}}
