--- a/frontend/src/app/components/friendlist/friend/friend.component.scss
+++ b/frontend/src/app/components/friendlist/friend/friend.component.scss
@@ -1,3 +1,18 @@
 .btn {
     width: 177px;
+    background-color: white;
+}
+
+.btn:active {
+    background-color: none;
+    border: none;
+    outline: none;
+    padding: none;
+}
+
+.btn:focus {
+    background-color: white;
+    border: none;
+    outline: none;
+    padding: none;
 }
