--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -15,9 +15,14 @@
 #title {
     color: white;
 }
-#chatroom{
-  width: 100%;
-  bottom: 10px;
-  position: absolute;
+#chatroom {
+    width: 100%;
+    bottom: 10px;
+    position: absolute;
 }
 
+html, body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
