--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,10 +12,7 @@
 
 </head>
 
-<body scroll="no" style="overflow:hidden"  (window:resize)='resizeWindow()'>
-
-
-
+<body style="overflow:hidden" (window:resize)='resizeWindow()'>
 
   <header-navbar (featureSelected)="onNavigate($event)"></header-navbar>
 
