--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body style="overflow:hidden" (window:resize)='resizeWindow()'>
+<body (window:resize)='resizeWindow()'>
 
   <header-navbar (featureSelected)="onNavigate($event)"></header-navbar>
 
