--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,11 +16,17 @@
 
   <header-navbar (featureSelected)="onNavigate($event)"></header-navbar>
 
+  <div>
+    <app-registration  *ngIf='currentFeature === "Registration"'></app-registration>
+  </div>  
 
-  <div><app-registration  *ngIf='currentFeature === "Registration"'></app-registration></div>
-  <div><app-login  *ngIf='currentFeature === "Login"'></app-login></div>
-  <div><app-map></app-map></div>
+  <div>
+    <app-login  *ngIf='currentFeature === "Login"'></app-login>
+  </div>
 
+  <div>
+    <app-map></app-map>
+  </div>
 
   <div id="chatroom">
     <app-chatsystem></app-chatsystem>
