--- a/frontend/src/app/components/logout/logout.component.html
+++ b/frontend/src/app/components/logout/logout.component.html
@@ -1,1 +1,3 @@
-<button (click)='logout()' *ngIf='sessionState' class="btn btn-danger button">Logout</button>
+<button (click)='logout()' *ngIf='sessionState' class='btn btn-danger button'>
+    Logout
+</button>
