--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -1,7 +1,6 @@
-<div id="friendlist" *ngIf='sessionState' class="col">
-    <div id="friends">
-        <!-- <button class="btn btn-danger" (click)='session = !session'>hide (one time only)</button> -->
-        <div *ngFor="let friend of friends">
+<div id="friendlist" *ngIf='sessionState'>
+    <div id="friendlist">
+        <div id = 'friend' *ngFor="let friend of friends">
             <app-friend [friend] = "friend">
             </app-friend>
         </div>
