--- a/frontend/src/app/components/friendlist/friendlist.component.scss
+++ b/frontend/src/app/components/friendlist/friendlist.component.scss
@@ -2,7 +2,13 @@
     color:red($color: #123455)
 }
 
-#friends {
+#friendlisy {
     height: 250px;
     overflow-y: auto;
+}
+
+#friend{
+  position: absolute;
+  bottom: 0;
+
 }
