--- a/frontend/src/app/components/chatwidget/chatwidget.component.css
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.css
@@ -1,15 +1,13 @@
 ul {
   text-align: left;
-  padding-left: 0em
+  padding-left: 0em;
 }
 
 .widget {
-  // bottom: 1% ;
-  // margin: 1%;
   padding: 5%;
   width: 200px;
   height: 250px;
-  background-color: rgba(255,255,255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
   border: medium;
 }
 
@@ -19,7 +17,7 @@ ul {
   padding-left: 5px;
   padding-top: 2px;
   padding-bottom: 2px;
-  background-color: rgba(255,255,255, 1);
+  background-color: white;
 }
 
 .input {
@@ -40,12 +38,19 @@ ul {
   padding-bottom: 0;
   overflow-y: auto;
   overflow-x: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction:column-reverse ;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
 }
-#submit{
+
+#submit {
   right: 0px;
   width: 50px;
   bottom: 1px;
   position: absolute;
 }
+/*# sourceMappingURL=chatwidget.component.css.map */
