--- a/frontend/src/app/components/friendlist/friend/friend.component.scss
+++ b/frontend/src/app/components/friendlist/friend/friend.component.scss
@@ -3,16 +3,6 @@
     background-color: white;
 }
 
-.btn:active {
-    background-color: none;
-    border: none;
-    outline: none;
-    padding: none;
-}
-
-.btn:focus {
-    background-color: white;
-    border: none;
-    outline: none;
-    padding: none;
+.btn-dark {
+    color: black;
 }
