--- a/frontend/src/app/components/chatsystem/chatsystem.component.css
+++ b/frontend/src/app/components/chatsystem/chatsystem.component.css
@@ -16,4 +16,12 @@ app-friendlist {
   right: 1%;
   bottom: 1%;
 }
+
+.yeetus {
+  padding: 0 5px 0 5px;
+}
+
+.col-10 {
+  float: right !important;
+}
 /*# sourceMappingURL=chatsystem.component.css.map */
