--- a/frontend/src/app/components/chatwidget/chatwidget.component.css
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.css
@@ -48,9 +48,13 @@ ul {
 }
 
 #submit {
-  right: 0px;
+  right: 15px;
   width: 50px;
   bottom: 1px;
   position: absolute;
+}
+
+.col-2 {
+  float: right !important;
 }
 /*# sourceMappingURL=chatwidget.component.css.map */
