--- a/frontend/src/app/components/chatwidget/chatwidget.component.html
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.html
@@ -1,3 +1,4 @@
+<div class="col-2">
 <div class="space rounded-top" [innerText]='sessionRoomName' aria-readonly="true" (click)='toggleChatWidget()'></div>
 
 <div class="widget" id='chatbody'*ngIf='sessionState' (click)='initRoom()'>
@@ -12,6 +13,7 @@
             <input class= 'btnbtn-outline-secondary'id='submit'type="submit" value="Enter">
         </form>
   </div>
+</div>
 </div>
 
 
