--- a/frontend/src/app/components/chatwidget/chatwidget.component.css
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.css
@@ -22,7 +22,6 @@ ul {
 
 .input {
   bottom: 1px;
-  position: absolute;
   width: 145px;
   overflow-y: visible;
 }
@@ -51,10 +50,10 @@ ul {
   right: 15px;
   width: 50px;
   bottom: 1px;
-  position: absolute;
 }
 
-.col-2 {
-  float: right !important;
+#border {
+  border-color: red;
+  border-style: solid;
 }
 /*# sourceMappingURL=chatwidget.component.css.map */
