--- a/frontend/src/app/components/chatsystem/chatsystem.component.scss
+++ b/frontend/src/app/components/chatsystem/chatsystem.component.scss
@@ -12,13 +12,16 @@ app-chatwidget {
 }
 
 app-friendlist {
-    position: fixed;
     right: 1%;
     bottom: 1%;
+    position: fixed;
 }
-.yeetus{
-  padding: 0 5px 0 5px;
+
+.row{
+  max-height: 310px;
 }
-.col-10 {
-  float: right !important;
+
+#border{
+  border-color:red;
+  border-style:solid;
 }
