--- a/frontend/src/app/components/chatwidget/chatwidget.component.html
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.html
@@ -1,4 +1,4 @@
-<div class="col-2">
+<!-- <div  id='border' class="col-xs-0 col-auto">
 <div class="space rounded-top" [innerText]='sessionRoomName' aria-readonly="true" (click)='toggleChatWidget()'></div>
 
 <div class="widget" id='chatbody'*ngIf='sessionState' (click)='initRoom()'>
@@ -16,4 +16,4 @@
 </div>
 </div>
 
-
+ -->
