--- a/frontend/src/app/components/friendlist/friend/friend.component.scss
+++ b/frontend/src/app/components/friendlist/friend/friend.component.scss
@@ -1,8 +1,8 @@
 .btn {
     width: 177px;
-    background-color: white;
+    // background-color: white;
 }
 
 .btn-dark {
-    color: black;
+    color: hue($color: #8db5cf);
 }
