--- a/frontend/src/app/components/chatsystem/chatsystem.component.html
+++ b/frontend/src/app/components/chatsystem/chatsystem.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" id="border">
   <div class="row-12 chatwidget">
 
-    <div id='border' class="col-8 col-sm-8 col-md-9 col-lg-11">
+    <div id='border' class="col-8 col-sm-8 col-md-8 col-lg-10 col-xl-11">
       <div class='container-fluid'>
         <div class="row justify-content-end">
           <app-chatwidget
@@ -14,7 +14,7 @@
       </div>
     </div>
 
-    <div id='border' class="col-4 col-sm-4 col-md-3 col-lg-1">
+    <div id='border' class="col-4 col-sm-4 col-md-4 col-lg-2 col-xl-1">
       <app-friendlist></app-friendlist>
     </div>
 
