--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -24,7 +24,7 @@
     <app-login  *ngIf='currentFeature === "Login"'></app-login>
   </div>
 
-  <div>
+  <div id="map">
     <app-map></app-map>
   </div>
 
