--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -5,7 +5,7 @@
             </app-friend>
         </div>
     </div>
-    <form (submit)='onSubmit(input.value)'>
+    <form (submit)='onSubmit(input.value)' id="friendlist">
         <input #input type='text' (keyup)='onKey(input.value)' placeholder='(submit)=create room'>
     </form>
 </div>
