--- a/frontend/src/app/components/friendlist/friend/friend.component.html
+++ b/frontend/src/app/components/friendlist/friend/friend.component.html
@@ -1,5 +1,5 @@
 <button type="button" class="btn"
-    [ngClass]="friend.unread ? 'btn-danger' : friend.open ? 'btn-dark' : 'btn-light'"
+    [ngClass]="friend.unread ? 'btn-danger' : friend.open ? 'btn-light disabled' : 'btn-light'"
     (click)='toggleChatWidget(friend)'>
         {{sessionRoomName}}
 </button>
