--- a/frontend/src/app/components/friendlist/friendlist.component.scss
+++ b/frontend/src/app/components/friendlist/friendlist.component.scss
@@ -2,7 +2,11 @@
   color:red($color: #123455)
 }
 
-#friendlist {
+#input {
+  width: 100%;
+}
+
+#friends {
   max-height: 90%;
   overflow-y: auto;
 }
