--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -26,5 +26,11 @@
 html, body {
     overflow-y: hidden !important;
     max-height: 100% !important;
+    height: 100%;
 }
 
+#sidebar {
+    height: 300px;
+    width: 30px;
+    color: rgba(236, 115, 106, 0.836);
+}
