--- a/frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/sidebar/sidebar.component.scss
@@ -5,12 +5,13 @@
     bottom: 10%;
     left: 2%;
     max-height: 80%;
-    max-width: 20%;
+    max-width: 30;
     border-radius: 1;
-    background-color: rgba(255,255,255,1);
+    background-color: rgba(255,255,255,0.7);
 }
 
-.col {
-    height: 30%;
-    background-color: rgba(255,255,255,0.8);
+
+.row {
+    height: 5%;
+    background-color: rgba(255,255,255,0.85);
 }
