--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
-<div id='sidebar' class="col.auto col-4 col-sm-4 col-md-4 col-lg-2 col-xl-1 align-self-start">
-    <div class="row btn-group-toggle">
-        <div class="col btn">Places</div>
-        <div class="col btn">Location</div>
-        <div class="col btn">Users</div>
+<div id='sidebar' class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+    <div class="row navbar">
+        <div class="btn">Places</div>
+        <div class="btn">Attractions</div>
+        <div class="btn">Users</div>
     </div>
 
 </div>
