--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -25,6 +25,6 @@
 
 html, body {
     overflow-y: hidden !important;
-    max-height: 100% !important;
+    max-height: 100vh;
     height: 100%;
 }
