--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
           <a class='nav-link' href='#'>Link</a>
         </li>
         <li class='nav-item'>
-          <a class='nav-link' [innerHTML]='username' href='#'></a>
+          <a class='nav-link' [innerHTML]='username' href='#' (click)='onSelect("Profile")'></a>
         </li>
       </ul>
   
