--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -3,28 +3,28 @@
     <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
       <span class='navbar-toggler-icon'></span>
     </button>
-  
+
     <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-  
+
       <ul class='navbar-nav mr-auto'>
         <li class='nav-item'>
-          <a class='nav-link' href='#'>Home <span class='sr-only'>(current)</span></a>
+          <a class='nav-link'>Home <span class='sr-only'>(current)</span></a>
         </li>
         <li class='nav-item'>
-          <a class='nav-link' href='#'>Link</a>
+          <a class='nav-link'>Link</a>
         </li>
         <li class='nav-item'>
-          <a class='nav-link' [innerHTML]='username' href='#' (click)='onSelect("Profile")'></a>
+          <a class='nav-link' [innerHTML]='username' (click)='onSelect("Profile")'></a>
         </li>
       </ul>
-  
+
       <ul class='navbar-nav' my-2 my-lg-0>
-    
+
         <li class='nav-item'>
-          <a class='nav-link' *ngIf='!sessionState' href='#' (click)='onSelect("Registration")'>Register<span class='sr-only'></span></a>
+          <a class='nav-link' *ngIf='!sessionState' routerLink='register'>Register<span class='sr-only'></span></a>
         </li>
         <li class='nav-item'>
-          <a class='nav-link' *ngIf='!sessionState' href='#' (click)='onSelect("Login")'>Login</a>
+          <a class='nav-link' *ngIf='!sessionState' routerLink='login'>Login</a>
         </li>
         <li class='nav-item'>
           <app-logout></app-logout>
@@ -35,4 +35,4 @@
         <button class='btn btn-outline-success my-2 my-sm-0' type='submit'>Search</button>
       </form>
     </div>
-  </nav>  
+  </nav>
