--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -22,7 +22,7 @@
     <app-sidebar></app-sidebar>
   </div>
   <div id="map">
-    <!-- <app-map></app-map> -->
+    <app-map></app-map>
   </div>
 
   <div id="chatroom">
