--- a/frontend/src/app/components/loginpage/loginpage.component.html
+++ b/frontend/src/app/components/loginpage/loginpage.component.html
@@ -1,15 +1,31 @@
-<form class='modal-body' id='form' (submit)='loginClicked(password.value, username.value, $event)'>
+<!-- <form class='modal-body' id='form' (submit)='loginClicked(password.value, username.value, $event)'>
     <h1 class='jumbotron modal-title'>Login</h1>
       <div class='form-group'>
           <label for='exampleInputEmail1'>Email or Username</label>
           <input #username type='text' class='form-control' id='email/user' aria-describedby='emailHelp' required>
         </div>
-      <!-- password -->
       <div class='form-group'>
         <label for='exampleInputPassword1'>Password</label>
         <input #password type='password' class='form-control' id='password' pattern='.{5,}' required title='please enter your password' required>
       </div>
       <button type='submit' id ='submit' class='btn btn-primary' aria-required='true' >Login</button>
-</form>
+</form> -->
 
+<div>
+  <form class='modal-body' [formGroup]='loginForm' (ngSubmit)='loginClicked()'>
+    <h1 class='jumbotron modal-title'>Login</h1>
+      <span *ngIf='login_err' class="help-block" >username or password incorrect</span>
+      <!-- email/username -->
+      <div class='form-group' >
+        <label for='exampleInputEmail1'>Email or Username</label>
+        <input type='text' class='form-control' formControlName='username'>
+      </div>
+      <!-- password -->
+      <div class='form-group'>
+        <label for='exampleInputPassword1'>Password</label>
+        <input type='password' class='form-control' formControlName='password'>
+      </div>
+      <button type='submit' class='btn btn-primary'>Login</button>
+  </form>
+</div>
 
