--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -18,9 +18,10 @@
 
   <router-outlet></router-outlet>
 
- <div>
+  <!-- <div>
     <app-sidebar></app-sidebar>
-  </div>
+  </div> -->
+  
   <div id="map">
     <app-map></app-map>
   </div>
