--- a/frontend/src/app/components/chatwidget/chatwidget.component.html
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.html
@@ -8,10 +8,12 @@
 
 <div  class='space rounded-bottom' >
   <div id="input">
-        <form (submit)='sendMessage(msg.value)'>
-            <input class="input" name="ngModel" [(ngModel)]='typeArea' #msg='ngModel' type="text">
-            <input class= 'btnbtn-outline-secondary'id='submit'type="submit" value="Enter">
-        </form>
+    <form (submit)='sendMessage(msg.value)' class="container-fluid">
+      <div class="row">
+        <input class="input col-auto" name="ngModel" [(ngModel)]='typeArea' #msg='ngModel' type="text">
+        <input class='btn btn-primary col' id='submit' type="submit" value="Send">
+      </div>
+    </form>
   </div>
 </div>
 </div>
