--- a/frontend/src/app/components/chatwidget/chatwidget.component.scss
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.scss
@@ -13,12 +13,15 @@ ul {
   border: medium;
 }
 
-.space {
-  width: 200px;
-  height: 30px;
+.space.rounded-top {
   padding-left: 5px;
   padding-top: 2px;
   padding-bottom: 2px;
+}
+
+.space {
+  width: 200px;
+  height: 30px;
   background-color: rgba(255,255,255, 1);
 }
 
@@ -26,6 +29,10 @@ ul {
   bottom: 1px;
   width: 145px;
   overflow-y: visible;
+}
+
+.row .container-fluid {
+  margin: 0px;
 }
 
 #textarea {
@@ -43,8 +50,10 @@ ul {
   flex-direction:column-reverse ;
 }
 #submit{
-  right: 15px;
+  right: 0px;
+  padding: 0;
   width: 50px;
   bottom: 1px;
+  opacity: 1;
 }
 
