--- a/frontend/src/app/components/chatwidget/chatwidget.component.scss
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.scss
@@ -26,7 +26,6 @@ ul {
 }
 
 .input {
-  bottom: 1px;
   width: 145px;
   overflow-y: visible;
 }
@@ -53,7 +52,7 @@ ul {
   right: 0px;
   padding: 0;
   width: 50px;
-  bottom: 1px;
   opacity: 1;
+  border-radius: 0px;
 }
 
