--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -16,15 +16,29 @@
     color: white;
 }
 
-#chatroom {
-    z-index: 1;
+#chatsystem {
+    z-index: 2;
     width: 100%;
     bottom: 10px;
     position: absolute;
 }
 
+#head {
+    // padding: 1%;
+    z-index: 1;
+    position: absolute;
+    top: 1px;
+    height: auto;
+}
+
+app-map {
+    z-index: 0;
+}
+
 html, body {
     overflow-y: hidden !important;
+    overflow-x: hidden !important;
+    max-width: 100%;
     max-height: 100vh;
     max-height: 100vh !important;
     height: 100vh !important;
