--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,4 +1,22 @@
-<nav class='navbar navbar-expand-sm navbar-light bg-light'>
+  <div class="row ">
+    <form class='form col-6 col-sm-6 col-md-6 col-lg-6 col-xl-4
+                      offset-3 offset-sm-3 offset-md-3 offset-lg-3 offset-xl-4'>
+      <input class='form-control' type='search' placeholder='Search' aria-label='Search'>
+    </form>
+
+    <div class='col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2
+                offset-lg-1 offset-xl-2'
+      *ngIf='!sessionState'>
+        <a class='btn btn-primary' routerLink='register' style="margin-right: 1%;">Register<span class='sr-only'></span></a>
+        <a class='btn btn-primary' routerLink='login'>Login<span class='sr-only'></span></a>
+      </div>
+
+    <app-logout class='col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1
+                       offset-sm-1 offset-md-3 offset-lg-2 offset-xl-3'></app-logout> 
+  </div>
+
+<!-- 
+  <nav class='navbar navbar-expand-sm navbar-light bg-light'>
     <a class='navbar-brand' href='#'>Homepage </a>
     <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
       <span class='navbar-toggler-icon'></span>
@@ -35,4 +53,4 @@
         <button class='btn btn-outline-success my-2 my-sm-0' type='submit'>Search</button>
       </form>
     </div>
-  </nav>
+  </nav> -->
