--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -3,6 +3,7 @@
         <div class="btn">Places</div>
         <div class="btn">Attractions</div>
         <div class="btn">Users</div>
+        <app-profile></app-profile>
     </div>
 
 </div>
