--- a/frontend/src/app/components/profile/profile.component.scss
+++ b/frontend/src/app/components/profile/profile.component.scss
@@ -2,8 +2,9 @@
     position: absolute;
     z-index: 2;
     top: 2px;
-    background-color: rgba(25,25,255, $alpha: 0.9);
-    padding: 1%;
+    background-color: rgba(255,255,255, $alpha: 0.9);
+    padding-left: 1%;
+    padding-right: 1%;
     border-radius: 2%;
     top: 25%;
     bottom: 25%;
