--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -12,5 +12,6 @@
     </div>
     <div *ngIf='!User'>
         Error: User not found
-    </div>   
+    </div>
+    <button class="btn btn-secondary" (click)='onExit()'>Back</button>   
 </div>
