--- a/frontend/src/app/components/profile/profile.component.scss
+++ b/frontend/src/app/components/profile/profile.component.scss
@@ -6,8 +6,11 @@
     padding-left: 1%;
     padding-right: 1%;
     border-radius: 2%;
-    top: 25%;
-    bottom: 25%;
+    top: 20%;
     left: 25%;
     right: 25%;
+}
+
+.btn {
+    margin: 1%;
 }
